--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,21 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+*.*~
+
+chainer/
+cupy/
+dat/
+filelock.py
+google/
+h5py/
+nose-1.3.7.dist-info/
+nose/
+numpy/
+protobuf-3.1.0.post1-py2.7-nspkg.pth
+protobuf-3.1.0.post1.dist-info/
+six-1.10.0.dist-info/
+six.py
+turn/
+
